...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingPrefix">


    <in.koreatech.koin.core.appbar.AppBarBase
        android:id="@+id/koin_base_app_bar_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftButtonBackground="@drawable/ic_back_arrow"
        app:rightButtonBackground="@drawable/ic_create" />


...
                android:layout_marginTop="14.5dp"
                android:background="@color/divider"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/article_comment_writer" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/article_comment_content_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="22.5dp"
                android:layout_marginEnd="16dp"
                android:lineSpacingExtra="10sp"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/article_comment_comment_edit_border"
                app:layout_goneMarginTop="17.5dp">

                <EditText
                    android:id="@+id/article_comment_password_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="11dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="5.7dp"
                    android:background="@null"
                    android:hint="비밀번호를 입력해주세요"
                    android:inputType="textPassword"
                    android:letterSpacing="-0.05"
                    android:lineSpacingExtra="10sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray3"
                    android:textSize="14sp"
...
                    android:layout_height="21dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="11dp"
                    android:layout_marginEnd="12dp">

                    <EditText
                        android:id="@+id/article_comment_nickname_edittext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="닉네임을 입력해주세요"
                        android:letterSpacing="-0.05"
                        android:lineSpacingExtra="10sp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray3"
                        android:textSize="14sp"
                        app:fontName="Regular" />
...
                    android:layout_height="63dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="12dp">

                    <EditText
                        android:id="@+id/article_comment_content_edittext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="댓글을 작성해주세요"
                        android:letterSpacing="-0.05"
                        android:lineSpacingExtra="10sp"
...
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4.3dp"
                    android:layout_marginEnd="4.3dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_gray9_rectangle"
                    android:text="삭제"
                    android:textColor="@color/red"
                    app:fontName="Regular" />

                <Button
                    android:id="@+id/article_comment_anonymous_register_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4.3dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_gray9_rectangle"
                    android:text="등록"
...
